TODO
* WINAPI add LIBERROR_OUTPUT_ERROR_INSUFFICIENT_SPACE support
* add tests
* add borlandc5 and codegear files

20120425
* fixes for pkg-config detection of libraries

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* worked on WINAPI fallback functions
* updated man page
* worked on msvscpp files

20120405
* added dpkg files
* added support for pkg-config to configure

20120403
* Worked on stand-alone version
