@@ -1,4 +1,4 @@
 Acknowledgements: libcerror
 
-Copyright (c) 2008-2012, Joachim Metz <jbmetz@users.sourceforge.net>
+Copyright (c) 2008-2012, Joachim Metz <joachim.metz@gmail.com>
 
