@@ -1,10 +1,10 @@
 Source: libcerror
 Section: unknown
 Priority: extra
-Maintainer: Joachim Metz <jbmetz@users.sourceforge.net>
+Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev
 Standards-Version: 3.8.3
-Homepage: https://sourceforge.net/projects/libctype/
+Homepage: http://code.google.com/p/libclibs/
 
 Package: libcerror
 Section: libs
