@@ -5,7 +5,7 @@ Summary: Library to support cross-platform C error functions
 Group: System Environment/Libraries
 License: LGPL
 Source: %{name}-%{version}.tar.gz
-URL: http://libctype.sourceforge.net
+URL: http://code.google.com/p/libclibs/
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @libcerror_spec_requires@ @ax_libcstring_spec_requires@
 @libcerror_spec_build_requires@ @ax_libcstring_spec_build_requires@
@@ -55,6 +55,6 @@ rm -rf ${RPM_BUILD_ROOT}
 %{_mandir}/man3/*
 
 %changelog
-* Tue Apr  3 2012 Joachim Metz <jbmetz@users.sourceforge.net> 20120403-1
+* Tue Apr  3 2012 Joachim Metz <joachim.metz@gmail.com> 20120403-1
 - Initial version
 
