@@ -1,6 +1,6 @@
 dnl Functions for libcstring
 dnl
-dnl Version: 20120425
+dnl Version: 20120501
 
 dnl Function to detect if libcstring is available
 dnl ac_libcstring_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -41,7 +41,8 @@ AC_DEFUN([AX_LIBCSTRING_CHECK_LIB],
    AC_CHECK_HEADERS([libcstring.h])
  
    AS_IF(
-    [test "x$ac_cv_with_libcstring" != xno],
+    [test "x$ac_cv_with_libcstring" = xno],
+    [ac_cv_libcstring=no],
     [dnl Check for the individual functions
     ac_cv_libcstring=yes
 
