@@ -1,4 +1,4 @@
-.Dd April 6, 2012
+.Dd May 7, 2012
 .Dt libcerror 3
 .Os libcerror
 .Sh NAME
@@ -43,12 +43,12 @@ None
 .Sh FILES
 None
 .Sh BUGS
-Please report bugs of any kind to <jbmetz@users.sourceforge.net> or on the project website:
-http://libctype.sourceforge.net
+Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
+http://code.google.com/p/libclibs/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
-Copyright 2008-2012 Joachim Metz <jbmetz@users.sourceforge.net>.
+Copyright 2008-2012 Joachim Metz <joachim.metz@gmail.com>.
 This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .Sh SEE ALSO
 the libcerror.h include file
