@@ -2,4 +2,4 @@ libcerror (@VERSION@-1) unstable; urgency=low
 
   * Initial release
 
- -- Joachim Metz <jbmetz@users.sourceforge.net>  @DATE@
+ -- Joachim Metz <joachim.metz@gmail.com>  @DATE@
